[gd_scene load_steps=26 format=3 uid="uid://17uvdl8q4dts"]

[ext_resource type="Script" path="res://Characters/player.gd" id="1_6ey2k"]
[ext_resource type="Texture2D" uid="uid://cp7p5yy1j762k" path="res://Assets/Player/Char1.png" id="2_0u75b"]
[ext_resource type="Texture2D" uid="uid://cyg503rbrqhu0" path="res://Assets/Player/Char2.png" id="3_5ux2l"]
[ext_resource type="Texture2D" uid="uid://dvebmf5togxqa" path="res://Assets/Player/Char3.png" id="4_j683e"]
[ext_resource type="Texture2D" uid="uid://cs8q3hpb32ett" path="res://Assets/Player/Char4.png" id="5_orvgp"]
[ext_resource type="Texture2D" uid="uid://bvsdmxytnprt2" path="res://Assets/Player/CharRun1.png" id="6_vd710"]
[ext_resource type="Texture2D" uid="uid://d0vv7jkmmfbsk" path="res://Assets/Player/CharRun2.png" id="7_tcpiw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_je74y"]
atlas = ExtResource("2_0u75b")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_whapo"]
atlas = ExtResource("3_5ux2l")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj45l"]
atlas = ExtResource("4_j683e")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_i12do"]
atlas = ExtResource("5_orvgp")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql1ch"]
atlas = ExtResource("6_vd710")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sdah"]
atlas = ExtResource("6_vd710")
region = Rect2(1620, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm35d"]
atlas = ExtResource("6_vd710")
region = Rect2(3240, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmf48"]
atlas = ExtResource("6_vd710")
region = Rect2(4860, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjvsv"]
atlas = ExtResource("6_vd710")
region = Rect2(6480, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_j004n"]
atlas = ExtResource("6_vd710")
region = Rect2(8100, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahp13"]
atlas = ExtResource("7_tcpiw")
region = Rect2(0, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxyrl"]
atlas = ExtResource("7_tcpiw")
region = Rect2(1620, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_s74bo"]
atlas = ExtResource("7_tcpiw")
region = Rect2(3240, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_anx84"]
atlas = ExtResource("7_tcpiw")
region = Rect2(4860, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftqq5"]
atlas = ExtResource("7_tcpiw")
region = Rect2(6480, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdie2"]
atlas = ExtResource("7_tcpiw")
region = Rect2(8100, 0, 1620, 2160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hisgv"]
atlas = ExtResource("7_tcpiw")
region = Rect2(9720, 0, 1620, 2160)

[sub_resource type="SpriteFrames" id="SpriteFrames_6j57q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je74y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je74y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whapo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj45l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i12do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj45l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whapo")
}],
"loop": true,
"name": &"Rest",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql1ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sdah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm35d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmf48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjvsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j004n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahp13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxyrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s74bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anx84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftqq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdie2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hisgv")
}],
"loop": true,
"name": &"Run",
"speed": 16.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_6ey2k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.017, 0.017)
sprite_frames = SubResource("SpriteFrames_6j57q")
animation = &"Run"
frame_progress = 0.449328

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
scale = Vector2(1.11, 1.11)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-8, 0, -8, 8, 8, 8, 8, -8, -8, -8)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8.06977, -12.4976, 7.70297, -12.4362, 8.00159, 13.3949, -8.21028, 13.5076)

[node name="Polygon2D" type="Polygon2D" parent="CollisionPolygon2D"]
visible = false
color = Color(0.666667, 0.682353, 0.556863, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(5, -5, 5, 6, -5, 6, -5, -5)

[connection signal="timeout" from="Coyote" to="." method="_on_coyote_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
